--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,9 +26,9 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "127.0.0.1:2376:2375"
-    networks:
-      nginx-custom_nginx_network:
-        ipv4_address: 172.25.0.8
+    # networks:
+    #   nginx-custom_nginx_network:
+    #     ipv4_address: 172.25.0.8
 
 networks:
   nginx-custom_nginx_network:
